--- a/templates/core/index.html
+++ b/templates/core/index.html
@@ -189,7 +189,7 @@
     <section class="image-banner custom" style="background-color: #648670 !important;">
         <div class="image-banner__content container py-3">
             <div class="offer-banner">
-                <h3 class="text-white fw-bold">Explore the latest discounts and promotions. Shop now for unbeatable
+                <h3 class="text-white fw-bold customm">Explore the latest discounts and promotions. Shop now for unbeatable
                     deals!
                 </h3>
                 <button class="btn btn-outline-primary border-0 fs-base text-uppercase fw-medium btn-55">
@@ -554,52 +554,52 @@
             data-bs-trigger="focus" data-bs-content='
     <div class="popover-product">
       <a href=" ">
-        <img loading="lazy" class="mb-3" src="{% static 'images/banner1/1.jpg' %}" alt="">
+        <img loading="lazy" class="mb-3" src="" alt="">
       </a>
       <p class="fw-medium mb-0"><a href=" "></a></p>
-      <p class="mb-0">₹129</p>
+      <p class="mb-0"></p>
     </div>
   '><span><img src="{% static './images/leaf.svg' %}" width="24px"></span></button>
         <button class="popover-point type2 position-absolute" style="left: 49%; top: 14%;" data-bs-toggle="popover"
             data-bs-trigger="focus" data-bs-content='
     <div class="popover-product">
       <p class="fw-medium mb-0"><a href=" ">Net Pot</a></p>
-      <p class="mb-0">₹129</p>
+      <p class="mb-0"></p>
     </div>
   '><span><img src="{% static './images/leaf.svg' %}" width="24px"></span></button>
         <button class="popover-point type2 position-absolute" style="left: 63%; top: 33%;" data-bs-toggle="popover"
             data-bs-trigger="focus" data-bs-content='
     <div class="popover-product">
       <p class="fw-medium mb-0"><a href=" ">Expanded Clay Aggregate</a></p>
-      <p class="mb-0">₹129</p>
+      <p class="mb-0"></p>
     </div>
   '><span><img src="{% static './images/leaf.svg' %}" width="24px"></span></button>
         <button class="popover-point type2 position-absolute" style="left: 62%; top: 46%;" data-bs-toggle="popover"
             data-bs-trigger="focus" data-bs-placement="top" data-bs-content='
     <div class="popover-product">
       <p class="fw-medium mb-0"><a href=" "></a></p>
-      <p class="mb-0">₹129</p>
+      <p class="mb-0"></p>
     </div>
   '><span><img src="{% static './images/leaf.svg' %}" width="24px"></span></button>
         <button class="popover-point type2 position-absolute" style="left: 79%; top: 42%;" data-bs-toggle="popover"
             data-bs-trigger="focus" data-bs-placement="left" data-bs-content='
     <div class="popover-product">
       <p class="fw-medium mb-0"><a href=" ">Timer</a></p>
-      <p class="mb-0">₹129</p>
+      <p class="mb-0"></p>
     </div>
   '><span><img src="{% static './images/leaf.svg' %}" width="24px"></span></button>
         <button class="popover-point type2 position-absolute" style="left:78%; top: 73%;" data-bs-toggle="popover"
             data-bs-trigger="focus" data-bs-placement="left" data-bs-content='
     <div class="popover-product">
       <p class="fw-medium mb-0"><a href=" ">Reserviour</a></p>
-      <p class="mb-0">₹129</p>
+      <p class="mb-0"></p>
     </div>
   '><span><img src="{% static './images/leaf.svg' %}" width="24px"></span></button>
         <button class="popover-point type2 position-absolute" style="left:75%; top: 87%;" data-bs-toggle="popover"
             data-bs-trigger="focus" data-bs-placement="left" data-bs-content='
     <div class="popover-product">
       <p class="fw-medium mb-0"><a href=" "></a></p>
-      <p class="mb-0">₹129</p>
+      <p class="mb-0"></p>
     </div>
   '><span><img src="{% static './images/leaf.svg' %}" width="24px"></span></button>
 
@@ -607,7 +607,7 @@
             data-bs-trigger="focus" data-bs-placement="left" data-bs-content='
   <div class="popover-product">
     <p class="fw-medium mb-0"><a href=" ">Submersible Pump</a></p>
-    <p class="mb-0">₹129</p>
+    <p class="mb-0"></p>
   </div>
 '><span><img src="{% static './images/leaf.svg' %}" width="24px"></span></button>
 
@@ -615,7 +615,7 @@
             data-bs-trigger="focus" data-bs-placement="left" data-bs-content='
 <div class="popover-product">
   <p class="fw-medium mb-0"><a href=" ">Openable NFT Channel</a></p>
-  <p class="mb-0">₹129</p>
+  <p class="mb-0"></p>
 </div>
 '><span><img src="{% static './images/leaf.svg' %}" width="24px"></span></button>
 
