--- a/static/css/style.css
+++ b/static/css/style.css
@@ -20653,7 +20653,7 @@ body.coming-soon-page .header {
   }
   
   .image-banner.custom {
-    min-height: 200px;
+    min-height: 130px;
   }
 
   .category_custom.mobile-custom {
@@ -20733,4 +20733,9 @@ ul.social-links.list-unstyled.custom_header {
   .slideshow-text h2 {
     font-size: 1rem !important;
   }
+
+  .text-white{
+    font-size: 19px;
+  }
+  
 }
