--- a/templates/partials/base.html
+++ b/templates/partials/base.html
@@ -540,7 +540,7 @@
         class="social-links list-unstyled custom_header d-flex flex-wrap mb-0"
       >
         <li>
-          <a href="https://www.facebook.com/urbanfarm.org.in?mibextid=ZbWKwL" class="footer__social-link d-block color-white">
+          <a href="https://www.facebook.com/urbanfarm.org.in?mibextid=ZbWKwL" class="footer__social-link d-block color-white" target="_blank">
             <svg
               class="svg-icon svg-icon_facebook"
               width="9"
@@ -554,7 +554,7 @@
         </li>
        
         <li>
-          <a href="https://www.instagram.com/urban.farm/?igsh=MTZocHZmcDVydHY3ag%3D%3D" class="footer__social-link d-block color-white">
+          <a href="https://www.instagram.com/urban.farm/?igsh=MTZocHZmcDVydHY3ag%3D%3D" class="footer__social-link d-block color-white" target="_blank">
             <svg
               class="svg-icon svg-icon_instagram"
               width="14"
@@ -758,7 +758,7 @@
 
                     <ul class="social-links list-unstyled d-flex flex-wrap mb-0">
                         <li>
-                            <a href="https://www.facebook.com/urbanfarm.org.in?mibextid=ZbWKwL" class="footer__social-link d-block text-white">
+                            <a href="https://www.facebook.com/urbanfarm.org.in?mibextid=ZbWKwL" target="_blank" class="footer__social-link d-block text-white">
                                 <svg class="svg-icon svg-icon_facebook" width="9" height="15" viewBox="0 0 9 15"
                                     xmlns="http://www.w3.org/2000/svg">
                                     <use href="#icon_facebook" />
@@ -766,14 +766,14 @@
                             </a>
                         </li>
                         <li>
-                            <a href="https://www.instagram.com/urban.farm/?igsh=MTZocHZmcDVydHY3ag%3D%3D" class="footer__social-link d-block text-white">
+                            <a href="https://www.instagram.com/urban.farm/?igsh=MTZocHZmcDVydHY3ag%3D%3D" target="_blank"  class="footer__social-link d-block text-white">
                                 <svg class="svg-icon svg-icon_instagram" width="14" height="13" viewBox="0 0 14 13"
                                     xmlns="http://www.w3.org/2000/svg">
                                     <use href="#icon_instagram" />
                                 </svg>
                             </a>
                         </li>
-                        <li>
+                        {% comment %} <li>
                             <a href="#" class="footer__social-link d-block text-white">
                                 <svg class="svg-icon svg-icon_youtube" width="16" height="11" viewBox="0 0 16 11"
                                     xmlns="http://www.w3.org/2000/svg">
@@ -781,7 +781,7 @@
                                         d="M15.0117 1.8584C14.8477 1.20215 14.3281 0.682617 13.6992 0.518555C12.5234 0.19043 7.875 0.19043 7.875 0.19043C7.875 0.19043 3.19922 0.19043 2.02344 0.518555C1.39453 0.682617 0.875 1.20215 0.710938 1.8584C0.382812 3.00684 0.382812 5.46777 0.382812 5.46777C0.382812 5.46777 0.382812 7.90137 0.710938 9.07715C0.875 9.7334 1.39453 10.2256 2.02344 10.3896C3.19922 10.6904 7.875 10.6904 7.875 10.6904C7.875 10.6904 12.5234 10.6904 13.6992 10.3896C14.3281 10.2256 14.8477 9.7334 15.0117 9.07715C15.3398 7.90137 15.3398 5.46777 15.3398 5.46777C15.3398 5.46777 15.3398 3.00684 15.0117 1.8584ZM6.34375 7.68262V3.25293L10.2266 5.46777L6.34375 7.68262Z" />
                                 </svg>
                             </a>
-                        </li>
+                        </li> {% endcomment %}
                         <li>
                             <a href="#" class="footer__social-link d-block text-white">
                                 <svg class="svg-icon svg-icon_pinterest" width="14" height="15" viewBox="0 0 14 15"
