Changes according to notes shared by alson sir

--- a/templates/core/index.html
+++ b/templates/core/index.html
@@ -286,7 +286,7 @@
                 <div
                     class="col-md-6 col-lg-4 col-xl-20per d-flex align-items-center flex-column justify-content-center py-4 align-items-md-start">
                     <h2>Summer Sale</h2>
-                    <h2 class="fw-bold">Up to 60% Off</h2>
+                    <h2 class="fw-bold">Up to 10% Off</h2>
 
                     <div class="position-relative d-flex align-items-center text-center pt-xxl-4 js-countdown mb-3"
                         data-date="18-3-2024" data-time="06:50">
@@ -540,11 +540,11 @@
     <div class="container">
 
 
-        <h2 class="section-title text-uppercase text-center mb-1 mb-md-3 pb-xl-2 mb-xl-4">Net Pots: 
-            <strong style="color:#004818 !important">Interactive Infographic Showcase</strong>
+        <h2 class="section-title text-uppercase text-center mb-1 mb-md-3 pb-xl-2 mb-xl-4">HYDROPONIC NUTRIENT FILM: 
+            <strong style="color:#004818 !important">TECHNIQUE INTERACTIVE INFORGRAPHIC</strong>
         </h2>
         <p class="text-center">
-            Dive into our interactive Net Pots Infographic Showcase, where you can explore the intricacies of this innovative system at your fingertips. Discover the hidden depths of hydroponic gardening with detailed visuals and informative tooltips. From setup to maintenance, our curated collection provides insights to help you cultivate your green oasis with confidence. Embark on a journey of knowledge and empowerment as you uncover the secrets of successful hydroponic cultivation through our interactive gallery.
+            The Nutrient Film Technique (NFT) is a hydroponic system used for growing plants without soil, where nutrient-rich water flows continuously over the plant roots in a thin film. In an NFT system, plants are typically grown in channels or gullies, with their roots suspended in the flowing nutrient solution.Benefits of NFT systems include efficient water and nutrient usage, better aeration for roots, and the ability to grow plants in a controlled environment without soil. However, they require careful monitoring of pH, nutrient levels, and water flow to ensure optimal plant growth. <span style="color:#004818;"><b>Are you considering setting up a hydroponic system?</span></b>
         </p>
     </div>
 
