--- a/templates/core/about-us.html
+++ b/templates/core/about-us.html
@@ -17,7 +17,7 @@
         <section class="about-us container">
             <div class="about-us__content pb-5 mb-5">
                 <p class="mb-5">
-                    <img loading="lazy" class="w-100 h-auto d-block" src="http://127.0.0.1:8000/static/images/banner1/2.jpg" width="1410"
+                    <img loading="lazy" class="w-100 h-auto d-block" src="{% static 'images/about-us-banner.jpg' %}" width="1410"
                         height="550" alt="">
                 </p>
                 <div class="mw-930">
@@ -51,17 +51,17 @@
 
         <section class="service-promotion horizontal container mw-930 pt-0 mb-md-4 pb-md-4 mb-xl-5">
             <div class="row">
-                <div class="col-md-4 text-center mb-5 mb-md-0">
+                <div class="col-md-6 text-center mb-5 mb-md-0">
                     <div class="service-promotion__icon mb-4">
                         <svg width="52" height="52" viewBox="0 0 52 52" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <use href="#icon_shipping" />
                         </svg>
                     </div>
                     <h3 class="service-promotion__title fs-6 text-uppercase">Fast And Free Delivery</h3>
-                    <p class="service-promotion__content text-secondary">Free delivery for all orders over $140</p>
+                    <p class="service-promotion__content text-secondary">Free delivery for all orders</p>
                 </div><!-- /.col-md-4 text-center-->
 
-                <div class="col-md-4 text-center mb-5 mb-md-0">
+                <div class="col-md-6 text-center mb-5 mb-md-0">
                     <div class="service-promotion__icon mb-4">
                         <svg width="53" height="52" viewBox="0 0 53 52" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <use href="#icon_headphone" />
@@ -71,7 +71,7 @@
                     <p class="service-promotion__content text-secondary">Friendly 24/7 customer support</p>
                 </div><!-- /.col-md-4 text-center-->
 
-                <div class="col-md-4 text-center mb-4 pb-1 mb-md-0">
+                {% comment %} <div class="col-md-4 text-center mb-4 pb-1 mb-md-0">
                     <div class="service-promotion__icon mb-4">
                         <svg width="52" height="52" viewBox="0 0 52 52" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <use href="#icon_shield" />
@@ -79,7 +79,7 @@
                     </div>
                     <h3 class="service-promotion__title fs-6 text-uppercase">Money Back Guarantee</h3>
                     <p class="service-promotion__content text-secondary">We return money within 30 days</p>
-                </div><!-- /.col-md-4 text-center-->
+                </div><!-- /.col-md-4 text-center--> {% endcomment %}
             </div><!-- /.row -->
         </section>
     </main>
