--- a/templates/core/checkout.html
+++ b/templates/core/checkout.html
@@ -217,7 +217,7 @@
                 },
                 willClose: () => {
                     // Redirect to invoice page after alert closes
-                    window.location.href = `http://127.0.0.1:8000/payment-invoice/?razorpay_payment_id=${response.razorpay_payment_id}&razorpay_order_id=${response.razorpay_order_id}&razorpay_signature=${response.razorpay_signature}&${queryParams}`;
+                    window.location.href = `https://urbanfarm.store/payment-invoice/?razorpay_payment_id=${response.razorpay_payment_id}&razorpay_order_id=${response.razorpay_order_id}&razorpay_signature=${response.razorpay_signature}&${queryParams}`;
                 }
             });
         },
