--- a/templates/core/contact_us.html
+++ b/templates/core/contact_us.html
@@ -33,7 +33,10 @@
                               sales.urbanfarm@gmail.com
                             </p>
                             <p>
-                              +91-8879658654
+                              +91-8879658654,  +91-9004268654
+                            </p>
+                            <p>
+                             
                             </p>
                             <a id="store_selector_1" href="https://www.google.com/maps/place/Urban+Farm+Systems+and+Technologies+LLP/@19.0648509,73.1267109,17z/data=!3m1!4b1!4m6!3m5!1s0x3be7c217dba119ed:0x441d70984a82c868!8m2!3d19.0648509!4d73.1267109!16s%2Fg%2F11cncczfx2?entry=ttu">See on the map</a>
                         </div>
@@ -43,7 +46,7 @@
             </div>
             <div class="col-lg-8">
                 
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3772.1536912365073!2d73.09522948730387!3d19.012948101932153!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7e82cc86d75d5%3A0xc9c572ed9aeb3428!2sKohinoor%20Complex!5e0!3m2!1sen!2sin!4v1711024640058!5m2!1sen!2sin" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3770.974678397825!2d73.12671089999999!3d19.0648509!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7c217dba119ed%3A0x441d70984a82c868!2sUrban%20Farm%20Systems%20and%20Technologies%20LLP!5e0!3m2!1sen!2sin!4v1714293676325!5m2!1sen!2sin" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                
             </div>
         </div>
