--- a/templates/core/main_category.html
+++ b/templates/core/main_category.html
@@ -53,7 +53,18 @@
             href="{% url 'core:category' main.main_title %}"
             class="lookbook-collection__item position-relative flex-grow-1 mb-4 effect border-plus"
           >
+          <style>
+            .gradient-overlay {
+              position: absolute;
+              top: 0;
+              left: 0;
+              width: 100%;
+              height: 100%;
+              background: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.4)); 
+            }
+          </style>
             <div class="lookbook-collection__item-image">
+              <div class="gradient-overlay"></div>
               <img
                 loading="lazy"
                 src="{{main.image.url}}"
@@ -66,7 +77,7 @@
               class="content_abs content_bottom content_left content_bottom-md content_left-md"
             >
               <p class="text-uppercase mb-1 white-color"></p>
-              <h3 class="white-color">{{main.main_title}}</h3>
+              <h3 class="white-color" style="text-transform: uppercase;">{{main.main_title}}</h3>
             </div>
           </a>
         </div>
