Added Guest Checkout Functionlity

--- a/templates/core/checkout.html
+++ b/templates/core/checkout.html
@@ -78,8 +78,8 @@
                         <div class="col-md-12">
                             <div class="form-floating mt-3 mb-3">
                                 <input type="text" class="form-control" id="checkout_street_address"
-                                    placeholder="Street Address *" />
-                                <label for="checkout_street_address">Street Address *</label>
+                                    placeholder="Billing Address *" />
+                                <label for="checkout_street_address">Billing Address *</label>
                             </div>
                         </div>
                         <div class="col-md-12">
