added tower in the homepage and justify content

--- a/templates/core/checkout.html
+++ b/templates/core/checkout.html
@@ -166,7 +166,7 @@
                                 Your personal data will be used to process your order,
                                 support your experience throughout this website, and for
                                 other purposes described in our
-                                <a href="terms.php" target="_blank">privacy policy</a>.
+                                <a href="/privacy-policy" target="_blank">privacy policy</a>.
                             </div>
                         </div>
                         <button type="button" class="btn btn-primary" id="rzp-button1">
