--- a/templates/core/index.html
+++ b/templates/core/index.html
@@ -543,7 +543,7 @@
         <h2 class="section-title text-uppercase text-center mb-1 mb-md-3 pb-xl-2 mb-xl-4">HYDROPONIC NUTRIENT FILM: 
             <strong style="color:#004818 !important">TECHNIQUE INTERACTIVE INFORGRAPHIC</strong>
         </h2>
-        <p class="text-center">
+        <p class="text-center" style="text-align: justify;">
             The Nutrient Film Technique (NFT) is a hydroponic system used for growing plants without soil, where nutrient-rich water flows continuously over the plant roots in a thin film. In an NFT system, plants are typically grown in channels or gullies, with their roots suspended in the flowing nutrient solution.Benefits of NFT systems include efficient water and nutrient usage, better aeration for roots, and the ability to grow plants in a controlled environment without soil. However, they require careful monitoring of pH, nutrient levels, and water flow to ensure optimal plant growth. <span style="color:#004818;"><b>Are you considering setting up a hydroponic system?</span></b>
         </p>
     </div>
@@ -556,7 +556,7 @@
       <a href=" ">
         <img loading="lazy" class="mb-3" src="" alt="">
       </a>
-      <p class="fw-medium mb-0"><a href=" "></a></p>
+      <p class="fw-medium mb-0"><a href=" ">Stand</a></p>
       <p class="mb-0"></p>
     </div>
   '><span><img src="{% static './images/leaf.svg' %}" width="24px"></span></button>
@@ -574,13 +574,7 @@
       <p class="mb-0"></p>
     </div>
   '><span><img src="{% static './images/leaf.svg' %}" width="24px"></span></button>
-        <button class="popover-point type2 position-absolute" style="left: 62%; top: 46%;" data-bs-toggle="popover"
-            data-bs-trigger="focus" data-bs-placement="top" data-bs-content='
-    <div class="popover-product">
-      <p class="fw-medium mb-0"><a href=" "></a></p>
-      <p class="mb-0"></p>
-    </div>
-  '><span><img src="{% static './images/leaf.svg' %}" width="24px"></span></button>
+      
         <button class="popover-point type2 position-absolute" style="left: 79%; top: 42%;" data-bs-toggle="popover"
             data-bs-trigger="focus" data-bs-placement="left" data-bs-content='
     <div class="popover-product">
@@ -595,13 +589,7 @@
       <p class="mb-0"></p>
     </div>
   '><span><img src="{% static './images/leaf.svg' %}" width="24px"></span></button>
-        <button class="popover-point type2 position-absolute" style="left:75%; top: 87%;" data-bs-toggle="popover"
-            data-bs-trigger="focus" data-bs-placement="left" data-bs-content='
-    <div class="popover-product">
-      <p class="fw-medium mb-0"><a href=" "></a></p>
-      <p class="mb-0"></p>
-    </div>
-  '><span><img src="{% static './images/leaf.svg' %}" width="24px"></span></button>
+ 
 
         <button class="popover-point type2 position-absolute" style="left:55%; top: 87%;" data-bs-toggle="popover"
             data-bs-trigger="focus" data-bs-placement="left" data-bs-content='
@@ -633,7 +621,7 @@
             <div class="col-lg-3">
                 <br>
                 <h2 class="text-uppercase">Visual Insights:  <strong style="color:#004818 !important">Explore Our Infographic Collection</strong></h2>
-                <p>
+                <p style="text-align: justify;">
                     <br>
                     Delve into our curated collection of informative infographics, offering visual insights into a variety of topics. From complex data to step-by-step guides, our infographics provide an engaging way to learn and understand. Explore this visual journey to gain valuable knowledge and discover new perspectives on a range of subjects <br>
                     <br>
@@ -645,96 +633,42 @@
                     <img class="w-100 h-auto" loading="lazy" src="{% static 'images/home1/pop-over-2.jpg' %}" width="1903"
                         height="709" alt="" style="box-shadow: 0px 25px 40px #8DC743;">
                     <button class="popover-point type2 position-absolute" style="left: 41%; top: 3%;"
-                        data-bs-toggle="popover" data-bs-trigger="focus" data-bs-content='
-          <div class="popover-product">
-            <a href=" ">
-              <img loading="lazy" class="mb-3" src="{% static 'images/banner1/1.jpg' %}" alt="">
-            </a>
-            <p class="fw-medium mb-0"><a href=" ">Regular Net Pots</a></p>
-            <p class="mb-0">₹129</p>
-          </div>
+                     data-bs-trigger="focus" data-bs-content='
+        
         '><span><img src="{% static './images/leaf.svg' %}" width="24px"></span></button>
                     <button class="popover-point type2 position-absolute" style="left: 49%; top: 14%;"
-                        data-bs-toggle="popover" data-bs-trigger="focus" data-bs-content='
-          <div class="popover-product">
-            <a href=" ">
-              <img loading="lazy" class="mb-3" src="{% static 'images/banner1/1.jpg' %}" alt="">
-            </a>
-            <p class="fw-medium mb-0"><a href=" ">Regular Net Pots</a></p>
-            <p class="mb-0">₹129</p>
-          </div>
+                     data-bs-trigger="focus" data-bs-content='
+        
         '><span><img src="{% static './images/leaf.svg' %}" width="24px"></span></button>
                     <button class="popover-point type2 position-absolute" style="left: 63%; top: 33%;"
-                        data-bs-toggle="popover" data-bs-trigger="focus" data-bs-content='
-          <div class="popover-product">
-            <a href=" ">
-              <img loading="lazy" class="mb-3" src="{% static 'images/banner1/1.jpg' %}" alt="">
-            </a>
-            <p class="fw-medium mb-0"><a href=" ">Regular Net Pots</a></p>
-            <p class="mb-0">₹129</p>
-          </div>
+                     data-bs-trigger="focus" data-bs-content='
+         
         '><span><img src="{% static './images/leaf.svg' %}" width="24px"></span></button>
                     <button class="popover-point type2 position-absolute" style="left: 62%; top: 46%;"
-                        data-bs-toggle="popover" data-bs-trigger="focus" data-bs-placement="top" data-bs-content='
-          <div class="popover-product">
-            <a href=" ">
-              <img loading="lazy" class="mb-3" src="{% static 'images/banner1/1.jpg' %}" alt="">
-            </a>
-            <p class="fw-medium mb-0"><a href=" ">Regular Net Pots</a></p>
-            <p class="mb-0">₹129</p>
-          </div>
+                     data-bs-trigger="focus" data-bs-placement="top" data-bs-content='
+    
         '><span><img src="{% static './images/leaf.svg' %}" width="24px"></span></button>
                     <button class="popover-point type2 position-absolute" style="left: 79%; top: 42%;"
-                        data-bs-toggle="popover" data-bs-trigger="focus" data-bs-placement="left" data-bs-content='
-          <div class="popover-product">
-            <a href=" ">
-              <img loading="lazy" class="mb-3" src="{% static 'images/banner1/1.jpg' %}" alt="">
-            </a>
-            <p class="fw-medium mb-0"><a href=" ">Regular Net Pots</a></p>
-            <p class="mb-0">₹129</p>
-          </div>
+                     data-bs-trigger="focus" data-bs-placement="left" data-bs-content='
+      
         '><span><img src="{% static './images/leaf.svg' %}" width="24px"></span></button>
                     <button class="popover-point type2 position-absolute" style="left:78%; top: 73%;"
-                        data-bs-toggle="popover" data-bs-trigger="focus" data-bs-placement="left" data-bs-content='
-          <div class="popover-product">
-            <a href=" ">
-              <img loading="lazy" class="mb-3" src="{% static 'images/banner1/1.jpg' %}" alt="">
-            </a>
-            <p class="fw-medium mb-0"><a href=" ">Regular Net Pots</a></p>
-            <p class="mb-0">₹129</p>
-          </div>
+                     data-bs-trigger="focus" data-bs-placement="left" data-bs-content='
+    
         '><span><img src="{% static './images/leaf.svg' %}" width="24px"></span></button>
                     <button class="popover-point type2 position-absolute" style="left:75%; top: 87%;"
-                        data-bs-toggle="popover" data-bs-trigger="focus" data-bs-placement="left" data-bs-content='
-          <div class="popover-product">
-            <a href=" ">
-              <img loading="lazy" class="mb-3" src="{% static 'images/banner1/1.jpg' %}" alt="">
-            </a>
-            <p class="fw-medium mb-0"><a href=" ">Regular Net Pots</a></p>
-            <p class="mb-0">₹129</p>
-          </div>
+                     data-bs-trigger="focus" data-bs-placement="left" data-bs-content='
+    
         '><span><img src="{% static './images/leaf.svg' %}" width="24px"></span></button>
 
                     <button class="popover-point type2 position-absolute" style="left:55%; top: 87%;"
-                        data-bs-toggle="popover" data-bs-trigger="focus" data-bs-placement="left" data-bs-content='
-        <div class="popover-product">
-          <a href=" ">
-            <img loading="lazy" class="mb-3" src="{% static 'images/banner1/1.jpg' %}" alt="">
-          </a>
-          <p class="fw-medium mb-0"><a href=" ">Regular Net Pots</a></p>
-          <p class="mb-0">₹129</p>
-        </div>
+                     data-bs-trigger="focus" data-bs-placement="left" data-bs-content='
+   
       '><span><img src="{% static './images/leaf.svg' %}" width="24px"></span></button>
 
                     <button class="popover-point type2 position-absolute" style="left:27%; top: 77%;"
-                        data-bs-toggle="popover" data-bs-trigger="focus" data-bs-placement="left" data-bs-content='
-      <div class="popover-product">
-        <a href=" ">
-          <img loading="lazy" class="mb-3" src="{% static 'images/banner1/1.jpg' %}" alt="">
-        </a>
-        <p class="fw-medium mb-0"><a href=" ">Regular Net Pots</a></p>
-        <p class="mb-0">₹129</p>
-      </div>
+                         data-bs-trigger="focus" data-bs-placement="left" data-bs-content='
+
     '><span><img src="{% static './images/leaf.svg' %}" width="24px"></span></button>
 
 
@@ -742,6 +676,8 @@
             </div>
         </div>
     </section>
+
+  
 
 
 
@@ -807,6 +743,30 @@
         </div>
     </section>
 
+    <section class="product-single container product-single__type-9">
+        <div class="row">
+
+
+            <div class="col-lg-6">
+                <br>
+                <h2 class="text-uppercase">Have a look: <br> <strong style="color:#004818 !important">Vertical aeroponics plant system</strong></h2>
+                <p style="text-align: justify;">
+                    <br>
+                    Vertical aeroponic plant systems represent an innovative approach to urban agriculture, revolutionizing the way we grow crops in limited spaces. In this system, plants are suspended in vertical columns or towers, with their roots exposed to a nutrient-rich mist or spray. Unlike traditional soil-based farming or even hydroponics, vertical aeroponics maximizes space efficiency by stacking plant growth vertically. This not only conserves land but also optimizes resource use, requiring less water and nutrients compared to conventional farming methods.  <br>
+                    <br>
+                    Additionally, the controlled environment of vertical aeroponic systems minimizes the risk of pests and diseases, leading to healthier plants and higher yields. As a sustainable solution to food production, these systems hold immense potential for urban areas, enabling communities to cultivate fresh produce locally and reducing the carbon footprint associated with transporting food over long distances. <br><br>
+                    With advancements in technology and increased awareness of the importance of sustainable agriculture, vertical aeroponic plant systems are poised to play a significant role in the future of food production.<br><br>
+                    Vertical aeroponic plant systems offer numerous advantages beyond just efficient space utilization. By suspending plants in the air and delivering nutrients directly to their roots through a fine mist, these systems promote rapid and robust growth. The aeroponic method ensures that plants have access to oxygen, which enhances nutrient uptake and encourages healthier root development. Moreover, vertical aeroponic systems can be implemented indoors, allowing for year-round cultivation regardless of external weather conditions.<br>
+                </p>
+            </div>
+            <div class="col-lg-6">
+                <section class="lookbook-products position-relative">
+                    <img class="w-100 h-auto" loading="lazy" src="{% static 'images/tower-product.jpg' %}" width="50%"
+                        height="50%" alt="" style="box-shadow: 0px 25px 40px #8DC743;">
+                </section>
+            </div>
+        </div>
+    </section>
 
     <section class="video-banner position-relative">
         <!-- <div class="h-100 d-flex flex-column justify-content-end position-relative py-3 py-xl-5">
