--- a/templates/partials/base.html
+++ b/templates/partials/base.html
@@ -942,17 +942,18 @@
                 <a href="{% url 'core:product_new' item.title %}"><h6 class="cart-drawer-item__title fw-normal">{{item.title}}</h6></a>  
                   <p class="cart-drawer-item__option text-secondary">Sku ID: {{item.sku}}</p>
                   <div class="d-flex align-items-center justify-content-between mt-1">
-                      <div class="qty-control position-relative">
-                          <input type="number" name="quantity" value="{{item.qty}}" min="1"
+                      <div class="position-relative">
+                       <span>Qty:</span> <span class="cart-drawer-item__price money price" style="font-size: 1em;">{{item.qty}}</span>
+                          <!-- <input type="number" name="quantity" value="{{item.qty}}" min="1"
                               class="qty-control__number border-0 text-center" />
                           <div class="qty-control__reduce text-start">-</div>
-                          <div class="qty-control__increase text-end">+</div>
+                          <div class="qty-control__increase text-end">+</div> -->
                       </div>
                       <span class="cart-drawer-item__price money price">₹ {{item.price|floatformat:"2"}}</span>
                   </div>
               </div>
   
-              <!-- <button class="btn-close-xs position-absolute top-0 end-0 js-cart-item-remove"></button> -->
+              <button class="btn-close-xs position-absolute top-0 end-0 remove-cart delete-product js-cart-item-remove" data-product="{{product_id}}"></button>
           </div>
          
           <hr class="cart-drawer-divider" />
