--- a/static/css/style.css
+++ b/static/css/style.css
@@ -19576,6 +19576,7 @@ a.add-to-wishlist.active .flaticon.flaticon-heart {
   padding: 2.5rem;
   display: flex;
   gap: 1rem;
+  box-shadow: 0px 0px 38px lightgoldenrodyellow;
 }
 @media (max-width: 767.98px) {
   .order-complete .order-info {
