--- a/templates/core/confirmation.html
+++ b/templates/core/confirmation.html
@@ -3,8 +3,8 @@
 <main>
     <div class="mb-4 pb-4"></div>
     <section class="shop-checkout container">
-        <h2 class="page-title">Order Received</h2>
-        <div class="checkout-steps">
+        {% comment %} <h2 class="page-title">Order Received</h2> {% endcomment %}
+        {% comment %} <div class="checkout-steps">
             <a href="/cart" class="checkout-steps__item active">
                 <span class="checkout-steps__item-number">01</span>
                 <span class="checkout-steps__item-title">
@@ -26,34 +26,31 @@
                     <em>Review And Submit Your Order</em>
                 </span>
             </a>
-        </div>
+        </div> {% endcomment %}
         <div class="order-complete">
             <div class="order-complete__message">
-                <svg width="80" height="80" viewBox="0 0 80 80" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <circle cx="40" cy="40" r="40" fill="#008000" />
-                    <path
-                        d="M52.9743 35.7612C52.9743 35.3426 52.8069 34.9241 52.5056 34.6228L50.2288 32.346C49.9275 32.0446 49.5089 31.8772 49.0904 31.8772C48.6719 31.8772 48.2533 32.0446 47.952 32.346L36.9699 43.3449L32.048 38.4062C31.7467 38.1049 31.3281 37.9375 30.9096 37.9375C30.4911 37.9375 30.0725 38.1049 29.7712 38.4062L27.4944 40.683C27.1931 40.9844 27.0257 41.4029 27.0257 41.8214C27.0257 42.24 27.1931 42.6585 27.4944 42.9598L33.5547 49.0201L35.8315 51.2969C36.1328 51.5982 36.5513 51.7656 36.9699 51.7656C37.3884 51.7656 37.8069 51.5982 38.1083 51.2969L40.385 49.0201L52.5056 36.8996C52.8069 36.5982 52.9743 36.1797 52.9743 35.7612Z"
-                        fill="white" />
-                </svg>
-                <h3>Your order is completed!</h3>
-                <p>Thank you. Your order has been received.</p>
-            </div>
+                <img src="{% static 'images/payment_failed.jpg' %}" alt="" width="15%">
+                <br>
+                <h4 style="font-size: 2rem;">Payment Failed. Please Try Again.</h4>
+                <p>Oops, Your Payment is Failed!</p><br>
+                <a href="/checkout" class="btn btn-danger mt-3 d-block">Pay Again</a>
+            </div> 
             <div class="order-info">
                 <div class="order-info__item">
-                    <label>Order Number</label>
-                    <span>13119</span>
+                    <label for="errorDescription">Error Description</label>
+                    <span></span>
                 </div>
                 <div class="order-info__item">
-                    <label>Date</label>
-                    <span>{{current_datetime}}</span>
+                    <label for="orderId">Order ID</label>
+                    <span></span>
                 </div>
                 <div class="order-info__item">
-                    <label>Total</label>
-                    <span>₹ {{cart_total_amount}}</span>
+                    <label for="paymentId">Payment ID</label>
+                    <span></span>
                 </div>
                 <div class="order-info__item">
-                    <label>Payment Method</label>
-                    <span>UPI</span>
+                    <label for="errorCode">Error Code</label>
+                    <span></span>
                 </div>
             </div>
         </div>
@@ -61,10 +58,35 @@
 </main>
 
 <div class="mb-5 pb-xl-5"></div>
+
 <script>
-    setTimeout(function() {
-        window.location.href = '/payment-invoice';
-    }, 2000);
+    // Extract query parameters from URL
+    function getQueryParams() {
+        var queryParams = {};
+        var queryString = window.location.search.substring(1);
+        var pairs = queryString.split('&');
+        pairs.forEach(function(pair) {
+            var keyValue = pair.split('=');
+            var key = decodeURIComponent(keyValue[0]);
+            var value = decodeURIComponent(keyValue[1]);
+            queryParams[key] = value;
+        });
+        return queryParams;
+    }
+
+    // Display error details
+    window.onload = function() {
+        var errorDetails = getQueryParams();
+        var orderInfoDiv = document.querySelector('.order-info');
+
+        // Populate error details
+        if (orderInfoDiv) {
+            orderInfoDiv.querySelector('label[for="errorDescription"]').nextElementSibling.textContent = errorDetails.description;
+            orderInfoDiv.querySelector('label[for="orderId"]').nextElementSibling.textContent = errorDetails.order_id;
+            orderInfoDiv.querySelector('label[for="paymentId"]').nextElementSibling.textContent = errorDetails.payment_id;
+            orderInfoDiv.querySelector('label[for="errorCode"]').nextElementSibling.textContent = errorDetails.code;
+        }
+    };
 </script>
 
 {% endblock main %}
